# s3_storage

./: .gitignore
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/Register/: page.tsx
frontend/src/app/[user]/: layout.tsx  page.tsx
frontend/src/app/[user]/@modal/(.)CreateBucket/: page.tsx
frontend/src/app/[user]/CreateBucket/: page.tsx
frontend/src/app/[user]/[bucketname]/: layout.tsx  page.tsx
frontend/src/app/[user]/[bucketname]/@modal/(.)CreateBlob/: page.tsx
frontend/src/app/[user]/[bucketname]/CreateBlob/: page.tsx
frontend/src/app/components/: BucketPage.tsx  CreateBlob.tsx  CreateBucket.tsx  Modal.tsx  ReactQueryClientProvider.tsx  Signout.tsx  UserDetails.tsx  changeCookie.tsx
