[package]
name = "rust_s3_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
argonautica = "0.2.0"
chrono = { version = "0.4.32", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.30"
rand = "0.8.5"
sanitize-filename = "0.5.0"
serde = "1.0.195"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
#cexpr = "0.6.0"
#nom = "7.1.3"

#[patch.crates-io]
#cexpr = { git = 'https://github.com/jethrogb/rust-cexpr' }
#nom = { git = 'https://github.com/Geal/nom' }
